Bug 593272. d3d9: Don't try to sync parent/child acceleration status. r=vlad

It doesn't make a ton of sense to make child widgets have the same acceleration
status as their parent now that we have (mostly - see bug 593440) only one
widget per window. (It might never have made sense.)

This fixes dialog boxes (which currently have child windows) not displaying any content.